--- a/HomeworkProject01/ProblemMaker/MainWindow.xaml
+++ b/HomeworkProject01/ProblemMaker/MainWindow.xaml
@@ -10,7 +10,7 @@
     Height="325"
     MinWidth="800"
     MinHeight="325"
-    DataContext="{d:DesignInstance Type=local:MainWindow}"
+    d:DataContext="{d:DesignInstance Type=local:MainWindow}"
     mc:Ignorable="d">
     <Window.Resources>
         <Style TargetType="{x:Type Label}">
