--- a/HomeworkProject01/RandomQuestionGenerator/MainWindow.xaml
+++ b/HomeworkProject01/RandomQuestionGenerator/MainWindow.xaml
@@ -1,9 +1,9 @@
 ﻿<Window
-    x:Class="ProblemMaker.MainWindow"
+    x:Class="RandomQuestionGenerator.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:ProblemMaker"
+    xmlns:local="clr-namespace:RandomQuestionGenerator"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
@@ -155,6 +155,5 @@
                     Icon="Play48" />
             </Grid>
         </Border>
-
     </Grid>
 </Window>
