--- a/HomeworkProject03/SourceFileFormatter/MainWindow.xaml
+++ b/HomeworkProject03/SourceFileFormatter/MainWindow.xaml
@@ -13,12 +13,12 @@
     d:DataContext="{d:DesignInstance local:MainWindow}"
     AllowDrop="True"
     Drop="OnWindowDrop"
-    SizeChanged="OnWindowSizeChanged"
     mc:Ignorable="d">
     <Window.Resources>
         <sys:Double x:Key="LargeFontSize">39</sys:Double>
         <sys:Double x:Key="MediumFontSize">24</sys:Double>
         <sys:Double x:Key="SmallFontSize">18</sys:Double>
+        <local:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         <Style TargetType="TextBlock">
             <Setter Property="Foreground" Value="White" />
         </Style>
@@ -33,8 +33,8 @@
             VerticalAlignment="Bottom"
             d:Visibility="Visible"
             IsIndeterminate="True"
-            Visibility="{Binding ViewModel.ProgressBarVisibility}" />
-        <Grid d:Visibility="Collapsed" Visibility="{Binding ViewModel.ImportPanelVisibility}">
+            Visibility="{Binding ViewModel.IsBusy, Converter={StaticResource BooleanToVisibilityConverter}}" />
+        <Grid d:Visibility="Collapsed" Visibility="{Binding ViewModel.IsNotRead, Converter={StaticResource BooleanToVisibilityConverter}}">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
                 <RowDefinition Height="Auto" />
@@ -60,52 +60,60 @@
                 Content="确定"
                 FontSize="{StaticResource MediumFontSize}" />
         </Grid>
-        <Grid d:Visibility="Visible" Visibility="{Binding ViewModel.StatisticsPanelVisibility}">
+        <Grid d:Visibility="Visible" Visibility="{Binding ViewModel.IsRead, Converter={StaticResource BooleanToVisibilityConverter}}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*" MinWidth="250" />
                 <ColumnDefinition Width="*" MinWidth="250" />
             </Grid.ColumnDefinitions>
-            <StackPanel Margin="20" Orientation="Vertical">
-                <TextBlock
-                    Margin="0,0,0,10"
-                    FontSize="{StaticResource LargeFontSize}"
-                    Text="概览" />
-                <TextBlock
-                    d:Text="路径：Program.cs"
-                    FontSize="{StaticResource SmallFontSize}"
-                    Text="{Binding ViewModel.FilePath, StringFormat='路径：{0}'}"
-                    TextWrapping="WrapWithOverflow" />
-                <TextBlock
-                    Margin="0,5,0,0"
-                    d:Text="行数：39"
-                    FontSize="{StaticResource SmallFontSize}"
-                    Text="{Binding ViewModel.LineCount, StringFormat='行数：{0}'}" />
-                <TextBlock
-                    Margin="0,5,0,0"
-                    d:Text="单词数：39"
-                    FontSize="{StaticResource SmallFontSize}"
-                    Text="{Binding ViewModel.WordCount, StringFormat='单词数：{0}'}" />
-                <ui:Button
-                    HorizontalAlignment="Center"
-                    Appearance="Primary"
-                    Command="{Binding ViewModel.FormatCommand}"
-                    Content="格式化"
-                    Icon="Code24" />
-                <TextBlock FontSize="{StaticResource LargeFontSize}" Text="预览" />
-                <ui:TextBox
-                    x:Name="FormattedTextBox"
-                    Margin="0,10,0,0"
-                    IsReadOnly="True"
-                    MaxLines="50"
-                    Text="{Binding ViewModel.FormattedText}" />
-                <ui:Button
-                    Margin="0,10,0,0"
-                    HorizontalAlignment="Center"
-                    Appearance="Success"
-                    Click="OnSaveButtonClicked"
-                    Content="另存为"
-                    Icon="Save24" />
-            </StackPanel>
+            <ScrollViewer>
+                <StackPanel Margin="20" Orientation="Vertical">
+                    <TextBlock
+                        Margin="0,0,0,10"
+                        FontSize="{StaticResource LargeFontSize}"
+                        Text="概览" />
+                    <TextBlock
+                        d:Text="路径：Program.cs"
+                        FontSize="{StaticResource SmallFontSize}"
+                        Text="{Binding ViewModel.FilePath, StringFormat='路径：{0}'}"
+                        TextWrapping="WrapWithOverflow" />
+                    <TextBlock
+                        Margin="0,5,0,0"
+                        d:Text="行数：39"
+                        FontSize="{StaticResource SmallFontSize}"
+                        Text="{Binding ViewModel.LineCount, StringFormat='行数：{0}'}" />
+                    <TextBlock
+                        Margin="0,5,0,0"
+                        d:Text="单词数：39"
+                        FontSize="{StaticResource SmallFontSize}"
+                        Text="{Binding ViewModel.WordCount, StringFormat='单词数：{0}'}" />
+                    <ui:Button
+                        HorizontalAlignment="Center"
+                        Appearance="Primary"
+                        Command="{Binding ViewModel.FormatCommand}"
+                        Content="格式化"
+                        Icon="Code24" />
+                    <TextBlock FontSize="{StaticResource LargeFontSize}" Text="预览" />
+                    <ui:TextBox
+                        Margin="0,10,0,0"
+                        IsReadOnly="True"
+                        Text="{Binding ViewModel.Text, Mode=OneWay}" />
+                    <ui:Button
+                        Margin="0,10,0,0"
+                        HorizontalAlignment="Center"
+                        Appearance="Success"
+                        Click="OnSaveButtonClicked"
+                        Content="另存为"
+                        Icon="Save24" />
+                    <ui:Button
+                        Margin="0,10,0,0"
+                        HorizontalAlignment="Center"
+                        Appearance="Light"
+                        Command="{Binding ViewModel.ReselectCommand}"
+                        Content="重新读取"
+                        Icon="DocumentAdd24" />
+                </StackPanel>
+            </ScrollViewer>
+
             <Grid Grid.Column="1" Margin="20">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
