--- a/HomeworkProject03/SourceFileFormatter/MainWindow.xaml
+++ b/HomeworkProject03/SourceFileFormatter/MainWindow.xaml
@@ -10,6 +10,8 @@
     Title="C#源文件格式化器"
     Width="800"
     Height="450"
+    MinWidth="800"
+    MinHeight="450"
     d:DataContext="{d:DesignInstance local:MainWindow}"
     AllowDrop="True"
     Drop="OnWindowDrop"
@@ -19,11 +21,16 @@
         <sys:Double x:Key="MediumFontSize">24</sys:Double>
         <sys:Double x:Key="SmallFontSize">18</sys:Double>
         <local:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+        <FontFamily x:Key="UbuntuMono">Fonts/#Ubuntu Mono derivative Powerline</FontFamily>
         <Style TargetType="TextBlock">
             <Setter Property="Foreground" Value="White" />
         </Style>
     </Window.Resources>
     <Grid Background="#1b1a19">
+        <Image
+            Source="Images/Background.jpg"
+            Stretch="UniformToFill"
+            Visibility="{Binding ViewModel.IsRead, Converter={StaticResource BooleanToVisibilityConverter}}" />
         <ui:Snackbar
             x:Name="Snackbar"
             Panel.ZIndex="1000"
@@ -53,106 +60,140 @@
             <ui:Button
                 Grid.Row="1"
                 Margin="20"
-                Padding="20,10"
                 HorizontalAlignment="Center"
                 Appearance="Primary"
                 Command="{Binding ViewModel.ReadCommand}"
-                Content="确定"
-                FontSize="{StaticResource MediumFontSize}" />
+                Content="确定" />
         </Grid>
         <Grid d:Visibility="Visible" Visibility="{Binding ViewModel.IsRead, Converter={StaticResource BooleanToVisibilityConverter}}">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="2*" MinWidth="250" />
-                <ColumnDefinition Width="*" MinWidth="250" />
+                <ColumnDefinition Width="*" MinWidth="300" />
+                <ColumnDefinition Width="0.6*" MinWidth="350" />
             </Grid.ColumnDefinitions>
-            <ScrollViewer>
-                <StackPanel Margin="20" Orientation="Vertical">
-                    <TextBlock
-                        Margin="0,0,0,10"
-                        FontSize="{StaticResource LargeFontSize}"
-                        Text="概览" />
-                    <TextBlock
-                        d:Text="路径：Program.cs"
-                        FontSize="{StaticResource SmallFontSize}"
-                        Text="{Binding ViewModel.FilePath, StringFormat='路径：{0}'}"
-                        TextWrapping="WrapWithOverflow" />
-                    <TextBlock
-                        Margin="0,5,0,0"
-                        d:Text="行数：39"
-                        FontSize="{StaticResource SmallFontSize}"
-                        Text="{Binding ViewModel.LineCount, StringFormat='行数：{0}'}" />
-                    <TextBlock
-                        Margin="0,5,0,0"
-                        d:Text="单词数：39"
-                        FontSize="{StaticResource SmallFontSize}"
-                        Text="{Binding ViewModel.WordCount, StringFormat='单词数：{0}'}" />
-                    <ui:Button
-                        HorizontalAlignment="Center"
-                        Appearance="Primary"
-                        Command="{Binding ViewModel.FormatCommand}"
-                        Content="格式化"
-                        Icon="Code24" />
-                    <TextBlock FontSize="{StaticResource LargeFontSize}" Text="预览" />
-                    <ui:TextBox
+            <Border
+                Margin="10,10,0,10"
+                Padding="20"
+                Background="#CC000000"
+                BorderBrush="#39c5bb"
+                BorderThickness="1,1,0,1">
+                <ScrollViewer>
+                    <StackPanel Orientation="Vertical">
+                        <TextBlock
+                            Margin="0,0,0,10"
+                            FontSize="{StaticResource LargeFontSize}"
+                            Text="统计" />
+                        <TextBlock
+                            d:Text="路径：Program.cs"
+                            FontSize="{StaticResource SmallFontSize}"
+                            Text="{Binding ViewModel.FilePath, StringFormat='路径：{0}', Mode=OneWay}"
+                            TextWrapping="WrapWithOverflow" />
+                        <TextBlock
+                            Margin="0,5,0,0"
+                            d:Text="行数：39"
+                            FontSize="{StaticResource SmallFontSize}"
+                            Text="{Binding ViewModel.LineCount, StringFormat='行数：{0}', Mode=OneWay}" />
+                        <TextBlock
+                            Margin="0,5,0,0"
+                            d:Text="单词数：39"
+                            FontSize="{StaticResource SmallFontSize}"
+                            Text="{Binding ViewModel.WordCount, StringFormat='单词数：{0}', Mode=OneWay}" />
+                        <StackPanel
+                            Margin="10"
+                            HorizontalAlignment="Center"
+                            Orientation="Horizontal">
+                            <ui:Button
+                                HorizontalAlignment="Center"
+                                Appearance="Primary"
+                                Command="{Binding ViewModel.FormatCommand}"
+                                Content="格式化"
+                                Icon="Code24" />
+                            <ui:Button
+                                Margin="20,0"
+                                HorizontalAlignment="Center"
+                                Appearance="Success"
+                                Click="OnSaveButtonClicked"
+                                Content="另存为"
+                                Icon="Save24" />
+                            <ui:Button
+                                HorizontalAlignment="Center"
+                                Appearance="Light"
+                                Command="{Binding ViewModel.ReselectCommand}"
+                                Content="重新读取"
+                                Icon="DocumentAdd24" />
+                        </StackPanel>
+                        <TextBlock FontSize="{StaticResource LargeFontSize}" Text="预览" />
+                        <TextBox
+                            Margin="0,10,0,0"
+                            FontFamily="{StaticResource UbuntuMono}"
+                            IsReadOnly="True"
+                            Text="{Binding ViewModel.Text, Mode=OneWay}" />
+                    </StackPanel>
+                </ScrollViewer>
+            </Border>
+            <Border
+                Grid.Column="1"
+                Margin="0,10,10,10"
+                Padding="20"
+                Background="#AA000000"
+                BorderBrush="#e74892"
+                BorderThickness="0,1,1,1">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock FontSize="{StaticResource LargeFontSize}" Text="单词" />
+                        <ComboBox
+                            Grid.Column="1"
+                            Margin="20,0"
+                            ItemsSource="{Binding ViewModel.WordSortModes}"
+                            SelectedIndex="0"
+                            SelectedItem="{Binding ViewModel.SortMode}" />
+                    </Grid>
+                    <ListView
+                        Grid.Row="1"
                         Margin="0,10,0,0"
-                        IsReadOnly="True"
-                        Text="{Binding ViewModel.Text, Mode=OneWay}" />
-                    <ui:Button
-                        Margin="0,10,0,0"
-                        HorizontalAlignment="Center"
-                        Appearance="Success"
-                        Click="OnSaveButtonClicked"
-                        Content="另存为"
-                        Icon="Save24" />
-                    <ui:Button
-                        Margin="0,10,0,0"
-                        HorizontalAlignment="Center"
-                        Appearance="Light"
-                        Command="{Binding ViewModel.ReselectCommand}"
-                        Content="重新读取"
-                        Icon="DocumentAdd24" />
-                </StackPanel>
-            </ScrollViewer>
-
-            <Grid Grid.Column="1" Margin="20">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="*" />
-                </Grid.RowDefinitions>
-                <StackPanel Orientation="Vertical">
-                    <TextBlock FontSize="{StaticResource LargeFontSize}" Text="单词统计" />
-                    <TextBlock
-                        Margin="0,10,0,0"
-                        FontSize="{StaticResource MediumFontSize}"
-                        Text="单词    数量" />
-                </StackPanel>
-                <ListView
-                    x:Name="WordStatisticsPanel"
-                    Grid.Row="1"
-                    Margin="0,10,0,0"
-                    ItemsSource="{Binding ViewModel.WordStatistics}">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="Auto" />
-                                </Grid.ColumnDefinitions>
-                                <TextBlock
-                                    FontSize="{StaticResource SmallFontSize}"
-                                    Text="{Binding Key}"
-                                    TextTrimming="CharacterEllipsis" />
-                                <TextBlock
-                                    Grid.Column="1"
-                                    Margin="10,0"
-                                    FontSize="{StaticResource SmallFontSize}"
-                                    Text="{Binding Value}" />
-                            </Grid>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </Grid>
-            <GridSplitter Width="1" HorizontalAlignment="Right" />
+                        ItemsSource="{Binding ViewModel.WordStatistics}">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*" />
+                                        <ColumnDefinition Width="Auto" />
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock
+                                        FontSize="{StaticResource SmallFontSize}"
+                                        Text="{Binding Key, Mode=OneWay}"
+                                        TextTrimming="CharacterEllipsis" />
+                                    <TextBlock
+                                        Grid.Column="1"
+                                        Margin="10,0"
+                                        FontSize="{StaticResource SmallFontSize}"
+                                        Text="{Binding Value, Mode=OneWay}" />
+                                </Grid>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </Grid>
+            </Border>
+            <GridSplitter
+                Width="1"
+                Margin="0,10"
+                HorizontalAlignment="Right">
+                <GridSplitter.Background>
+                    <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                        <LinearGradientBrush.GradientStops>
+                            <GradientStop Offset="0" Color="#39c5bb" />
+                            <GradientStop Offset="1" Color="#e74892" />
+                        </LinearGradientBrush.GradientStops>
+                    </LinearGradientBrush>
+                </GridSplitter.Background>
+            </GridSplitter>
         </Grid>
     </Grid>
 </Window>
